tests/compile_fail/declare_scheduler_constraints_block.stderr
error: declare_scheduler!: `constraints` must be a const-evaluable expression (emitted into a `pub static`). Block expressions like `{ ... }` are not const-eligible here — for a single literal value, drop the braces. For shared values, use a const binding (`const MY_VAL: T = ...;` then reference `MY_VAL`).
  --> tests/compile_fail/declare_scheduler_constraints_block.rs:14:19
   |
14 |         min_llcs: { 100 },
   |                   ^^^^^^^
